--- a/composer.json
+++ b/composer.json
@@ -21,19 +21,7 @@
         "cakephp/cakephp":              "~2.10@stable",
         "netcommons/install":           "@stable",
         "jms/serializer":               "1.1.0@stable",
-        "netcommons/bbses": "dev-speedup",
-        "netcommons/boxes": "dev-speedup",
-        "netcommons/circular-notices": "dev-speedup",
-        "netcommons/control-panel": "dev-speedup",
-        "netcommons/menus": "dev-speedup",
-        "netcommons/net-commons": "dev-speedup",
-        "netcommons/pages": "dev-speedup",
-        "netcommons/plugin-manager": "dev-speedup",
-        "netcommons/roles": "dev-speedup",
-        "netcommons/rooms": "dev-speedup",
-        "netcommons/topics": "dev-speedup",
-        "netcommons/user-manager": "dev-speedup",
-        "netcommons/users": "dev-speedup"
+        "netcommons/control-panel": "dev-speedup"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer":  "~1.0@stable",
