--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "netcommons/menus": "dev-speedup2",
         "netcommons/net-commons": "dev-speedup2",
         "netcommons/pages": "dev-speedup2",
+        "netcommons/reservations": "dev-speedup2",
         "netcommons/rooms": "dev-speedup2"
     },
     "require-dev": {
