--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,8 @@
         "cakephp/cakephp":              "~2.10@stable",
         "netcommons/install":           "@stable",
         "jms/serializer":               "1.1.0@stable",
-        "netcommons/boxes": "dev-speedup2",
-        "netcommons/calendars": "dev-speedup2",
-        "netcommons/menus": "dev-speedup2",
-        "netcommons/net-commons": "dev-speedup2",
-        "netcommons/pages": "dev-speedup2",
-        "netcommons/reservations": "dev-speedup2",
-        "netcommons/rooms": "dev-speedup2"
+        "netcommons/frames": "dev-speedup3",
+        "netcommons/pages": "dev-speedup3"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer":  "~1.0@stable",
