--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "netcommons/install":           "@stable",
         "jms/serializer":               "1.1.0@stable",
         "netcommons/net-commons": "dev-improve_performance_current",
-        "netcommons/pages": "dev-improve_performance_current"
+        "netcommons/pages": "dev-improve_performance_current",
+        "netcommons/blocks": "dev-improve_performance_current"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer":  "~1.0@stable",
