--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
         "jms/serializer":               "1.1.0@stable",
         "netcommons/net-commons": "dev-improve_performance_current",
         "netcommons/pages": "dev-improve_performance_current",
-        "netcommons/blocks": "dev-improve_performance_current"
+        "netcommons/blocks": "dev-improve_performance_current",
+        "netcommons/frames": "dev-improve_performance_current",
+        "netcommons/rooms": "dev-improve_performance_current",
+        "netcommons/boxes": "dev-improve_performance_current"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer":  "~1.0@stable",
