--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "netcommons/frames": "dev-improve_performance_current",
         "netcommons/rooms": "dev-improve_performance_current",
         "netcommons/boxes": "dev-improve_performance_current",
-        "netcommons/menus": "dev-improve_performance_current"
+        "netcommons/menus": "dev-improve_performance_current",
+        "netcommons/nc2-to-nc3": "dev-improve_performance_current"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer":  "~1.0@stable",
