--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
         "netcommons/quizzes": "dev-improve_performance_current",
         "netcommons/reservations": "dev-improve_performance_current",
         "netcommons/tasks": "dev-improve_performance_current",
-        "netcommons/videos": "dev-improve_performance_current"
+        "netcommons/videos": "dev-improve_performance_current",
+        "netcommons/users": "dev-improve_performance_current"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer":  "~1.0@stable",
