phpunitエラー修正

--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
         "netcommons/users": "dev-improve_performance_current",
         "netcommons/photo-albums": "dev-improve_performance_current",
         "netcommons/questionnaires": "dev-improve_performance_current",
-        "netcommons/registrations": "dev-improve_performance_current"
+        "netcommons/registrations": "dev-improve_performance_current",
+        "netcommons/circular-notices": "dev-improve_performance_current"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer":  "~1.0@stable",
